--- a/item.html
+++ b/item.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <input type="checkbox" id="check">
-        <h2><a href="#" class="logo"><img src="/pics/Fur2.png" alt="Logo"></a></h2>
+        <h2><a href="#" class="logo"><img src="Fur2.png" alt="Logo"></a></h2>
         <div id="home" class="navigation">
             <a href="index.html" style="color: black;">Home</a>
             <a href="about.html" style="color: black;">About</a>
